Completed To-Do-List 90%

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <div class="container">
         <div class="todo-app">
             <h1>To-Do App</h1>
+            <div class = "stat-container">
+                <div class="details">
+                    <h3>Keep it Up!</h3>
+                    <div id="progressbar">
+                        <div id ="progress"></div>
+                    </div>
+                </div>
+            </div>
             <form class = "input-area">
                 <input type = "text" id = "task-input" placeholder="Add a new task...">
                 <button type = "submit"  id ="add-task-btn"><i class="fa-solid fa-plus"></i></button>
@@ -23,5 +31,6 @@
         </div>
     </div>
     <script src = "script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
 </body>
 </html>
