Completed To-Do-List project 100%

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                         <div id ="progress"></div>
                     </div>
                 </div>
+                <div class="stats-number">
+                    <p id="numbers">0 / 0</p>
+                </div>
             </div>
             <form class = "input-area">
                 <input type = "text" id = "task-input" placeholder="Add a new task...">
