Fixed the bug in the images directory

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="todos-container">
                 <ul id="task-list">
                 </ul>
-                <img class = "empty-image" src = "/images/empty.svg" alt="empty.svg">
+                <img class = "empty-image" src = "./images/empty.svg" alt="empty.svg">
             </div>
         </div>
     </div>
